# jojo-engine

./: .envrc  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/core/: objects.cpp
